--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -110,88 +110,89 @@
   <!-- header-area start -->
   {{ block "header" . }}
   <header>
-    <div class="navbar-area active-headroom header--fixed">
-      <div class="navbar-area header--fixed">
-        <div class="navbar-appscode-wrapper">
-          <div class="navbar-appscode container">
 
-            <div class="navbar-left">
-              <div class="navbar-brand">
-                <a href="{{.Site.Params.domain_bytebuilders}}">
-                  <img src="{{ .Site.Data.products.bytebuilders.logo.src }}" alt="img" loading="lazy"
-                    decoding="async" loading="lazy" decoding="async" />
-                </a>
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-                </a>
-              </div>
+    <!-- header--fixed -->
+    <div class="navbar-area">
+      <div class="navbar-appscode-wrapper">
+        <div class="navbar-appscode container">
+
+          <div class="navbar-left">
+            <div class="navbar-brand">
+              <a href="{{.Site.Params.domain_bytebuilders}}">
+                <img src="{{ .Site.Data.products.bytebuilders.logo.src }}" alt="img" loading="lazy"
+                  decoding="async" loading="lazy" decoding="async" />
+              </a>
+              <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+              </a>
             </div>
+          </div>
 
-            <div class="navbar-right">
-              <div class="is-flex is-align-items-center is-justify-content-space-between is-fullwidth">
-                <ul>
-                  <!-- <li class="nav-item">
-                    <a href="{{.Site.Params.domain_marketplace}}" target="_blank" class="link">Marketplace</a>
-                  </li> -->
+          <div class="navbar-right">
+            <div class="is-flex is-align-items-center is-justify-content-space-between is-fullwidth">
+              <ul>
+                <!-- <li class="nav-item">
+                  <a href="{{.Site.Params.domain_marketplace}}" target="_blank" class="link">Marketplace</a>
+                </li> -->
+                <li class="nav-item">
+                  <a href="{{.Site.Params.blog_url}}" target="_blank" class="link">Blog</a>
+                </li>
+                <li class="nav-item">
+                  <a href="{{.Site.Params.domain_appscode}}/about/" target="_blank" class="link">About Us</a>
+                </li>
                   <li class="nav-item">
-                    <a href="{{.Site.Params.blog_url}}" target="_blank" class="link">Blog</a>
+                    <a href="{{.Site.Params.domain_appscode}}/contact/" target="_blank" class="link">Contact</a>
                   </li>
-                  <li class="nav-item">
-                    <a href="{{.Site.Params.domain_appscode}}/about/" target="_blank" class="link">About Us</a>
-                  </li>
-                   <li class="nav-item">
-                     <a href="{{.Site.Params.domain_appscode}}/contact/" target="_blank" class="link">Contact</a>
-                   </li>
-                  <li class="nav-item">
-                    <a href="https://appscode.com/webinar" target="_blank" class="link">Webinar <span
-                        class="whats-new">New</span></a>
-                  </li>
-                </ul>
-                <div class="navbar-item pr-0">
-                  <div class="buttons">
-                    <a href="{{.Site.Params.domain_accounts}}/user/login"
-                      class="button ac-button is-primary is-uppercase">
-                      Sign in
-                    </a>
-                    <a href="{{.Site.Params.domain_accounts}}/user/sign_up"
-                      class="button ac-button is-secondary is-uppercase ml-0">
-                      Sign up
-                    </a>
-                  </div>
+                <li class="nav-item">
+                  <a href="https://appscode.com/webinar" target="_blank" class="link">Webinar <span
+                      class="whats-new">New</span></a>
+                </li>
+              </ul>
+              <div class="navbar-item pr-0">
+                <div class="buttons">
+                  <a href="{{.Site.Params.domain_accounts}}/user/login"
+                    class="button ac-button is-primary is-uppercase">
+                    Sign in
+                  </a>
+                  <a href="{{.Site.Params.domain_accounts}}/user/sign_up"
+                    class="button ac-button is-secondary is-uppercase ml-0">
+                    Sign up
+                  </a>
                 </div>
-                <!-- if webinar exist script  -->
-                <script type="text/javascript">
-                  (function () {
-                    var xhr = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHTTP');
-                    xhr.onreadystatechange = function () {
-                      if (xhr.readyState === 4) {
-                        if (xhr.status === 200) {
-                          var result = JSON.parse(xhr.responseText);
-                          if (result.schedules) {
-                            let endDate = new Date(result.schedules[0]).getTime();
-                            let startDate = new Date().getTime();
-                            let timeRemaining = parseInt((endDate - startDate) / 1000);
-                            if (timeRemaining >= 0) {
-                              document.querySelector('.whats-new').classList.add('is-block')
-                            }
+              </div>
+              <!-- if webinar exist script  -->
+              <script type="text/javascript">
+                (function () {
+                  var xhr = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHTTP');
+                  xhr.onreadystatechange = function () {
+                    if (xhr.readyState === 4) {
+                      if (xhr.status === 200) {
+                        var result = JSON.parse(xhr.responseText);
+                        if (result.schedules) {
+                          let endDate = new Date(result.schedules[0]).getTime();
+                          let startDate = new Date().getTime();
+                          let timeRemaining = parseInt((endDate - startDate) / 1000);
+                          if (timeRemaining >= 0) {
+                            document.querySelector('.whats-new').classList.add('is-block')
                           }
                         }
                       }
-                    } //
-                    // console.log('GET', 'https://x.appscode.com/_/webinars/');
-                    xhr.open('GET', 'https://x.appscode.com/_/webinars/');
-                    xhr.send();
-                  }());
-                </script>
-                <!-- navbar items start -->
-              </div>
+                    }
+                  } //
+                  // console.log('GET', 'https://x.appscode.com/_/webinars/');
+                  xhr.open('GET', 'https://x.appscode.com/_/webinars/');
+                  xhr.send();
+                }());
+              </script>
+              <!-- navbar items start -->
             </div>
           </div>
         </div>
       </div>
     </div>
+
   </header>
   {{ end }}
   <!-- header-area end -->
