Update authors photo
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
 {{- $pages := $pctx.RegularPages -}}
 
 <!--============================== hero area 2022 start  ==============================-->
-<section class="hero-area-blog" style="background-image: url(/assets/images/bg-image/hero-bg.png);">
+<section class="hero-area-blog">
   <div class="container">
     <div class="slider-wrapper" >
       {{ range $idx, $p := $pages.ByDate.Reverse | first 1 }}
