--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -57,10 +57,10 @@
     border: 3px solid #e5eff9;
     overflow: hidden;
 
-    img {
-      transform: scale(1.6);
-      margin-top: 20px;
-    }
+    // img {
+    //   transform: scale(1.6);
+    //   margin-top: 20px;
+    // }
   }
 
   .information {
