--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -17,7 +17,8 @@
       a {
         color: $ac-white;
         font-family: "Roboto Mono", monospace;
-        &:hover{
+
+        &:hover {
           text-decoration: underline;
         }
       }
@@ -41,11 +42,34 @@
     }
   }
 }
+// section title small start
+.section-title-small {
+  font-family: "Roboto Mono";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
 
-.blog-items-area {
-  background: #f2f5f7;
-  overflow: hidden;
+  .icon-square {
+    width: 20px;
+    height: 20px;
+    background: rgba(217, 217, 217, 1);
+    margin-right: 16px;
+    display: block;
+  }
 }
+// section title small end
+.recent-blog-posts {
+  background-color: #f2f5f7;
+  padding: 40px 0 80px;
+}
+
+// .blog-items-area {
+//   overflow: hidden;
+// }
 
 .author {
   display: flex;
@@ -131,13 +155,42 @@ a.inline-button {
     padding-left: 0.5rem;
   }
 }
-
 // single blog card start
 .single-blog-card {
   background-color: #fff;
   display: block;
   height: 170px;
   padding: 32px 16px;
+  transition: 0.3s ease-in-out;
+  border: 1px solid transparent;
+  &.list-view {
+    height: auto;
+    padding: 0 16px 32px;
+    box-shadow: none;
+    border: 1px solid transparent;
+    border-bottom: 1px solid $ac-white-light;
+    &:hover {
+      border: 1px solid transparent;
+      box-shadow: none;
+      border-bottom: 1px solid $ac-white-light;
+    }
+    h2 {
+      margin-bottom: 8px;
+      font-size: 18px;
+    }
+    p {
+      margin-bottom: 16px;
+      color: $ac-color-text;
+    }
+  }
+  &:hover {
+    box-shadow: 0px 2px 30px rgba(44, 60, 74, 0.08);
+    border: 1px solid $ac-primary;
+
+    h2 {
+      color: $ac-primary;
+    }
+  }
 
   .user-info {
     display: flex;
@@ -166,10 +219,11 @@ a.inline-button {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 120%;
+    line-height: 130%;
     color: #1c1c1c;
     margin-bottom: 16px;
     letter-spacing: 0;
+    transition: 0.3s ease-in-out;
   }
 
   .card-bottom {
@@ -300,6 +354,7 @@ ul.social-share-button {
   background: #fff;
   box-shadow: 0 1px 3px rgba(15, 20, 40, 0.08);
   border-bottom: 1px solid $ac-white-light;
+  border-top: 1px solid $ac-white-light;
   height: 64px;
   position: sticky;
   top: 0;
@@ -412,10 +467,11 @@ ul.social-share-button {
 
 .blog-items-area {
   padding: 40px 0;
+
   .left-sidebar {
     margin-right: 30px;
     position: sticky;
-    top: 0px;
+    top: 100px;
     overflow-y: auto;
     max-height: calc(100vh - 0px);
 
@@ -1197,7 +1253,7 @@ ul.social-share-button {
   }
 }
 
-@media (min-width: 2000px){
+@media (min-width: 2000px) {
   .hero-area-blog {
     background-image: url(/assets/images/bg-image/hero-bg-2x.png);
   }
