Update blog details page
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,15 +1,63 @@
 {{ define "main" }}
 
+<!--============================== hero area 2022 start  ==============================-->
+<section class="hero-area-blog">
+  <div class="container">
+    <div class="slider-wrapper">
+      <div class="single-slider">
+        <div class="columns is-vcentered is-multiline single-blog-carousel">
 
+          <div class="column is-7">
+            <div class="blog-title-content">
+             <div class="date is-flex has-text-white">
+               <div class="width-20 mr-8"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                   stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                   <path stroke-linecap="round" stroke-linejoin="round"
+                     d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5" />
+                 </svg>
+               </div>
+               <strong class="has-text-white">{{ .Date.Format "2-Jan-2006" }}</strong>
+             </div>
+              <!-- title  -->
+              <h1 data-aos="fade-up" data-aos-duration="500">{{ .Title }}</h1>
+              <!-- summary  -->
+            </div>
+          </div>
+
+          <div class="column is-5">
+            <!-- is-justify-content-flex-end  -->
+              <div class="is-flex ml-20">
+                <!-- author start  -->
+                {{ range $author := .Params.authors }}
+                <div class="author ml-10">
+                  <a href="/authors/{{ $author | urlize }}" class="author-image"><img
+                      src="/assets/images/authors/{{ $author | urlize}}.jpg" alt="author-image"></a>
+                  <div class="information">
+                    <h5><a href="/authors/{{ $author | urlize }}">{{ $author }}</a></h5>
+                    <p class="designation">Senior Software Engineer</p>
+                    <a href="appscode.com" class="company">AppsCode Inc</a>
+                  </div>
+                </div>
+                <!-- author end -->
+                {{end}}
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+<!--============================== hero area 2022 end =================================-->
 <!-- blog details area start  -->
 <section class="blog-details-area">
   <div class="container">
     <div class="columns">
-      <div class="column is-1">
+      <!-- <div class="column is-1"> -->
         <!-- sticky social menu start  -->
-        <div class="sticky-social-menu">
+        <!-- <div class="sticky-social-menu">
           <div class="social-share">
-            <ul class="social-share-button is-flex-direction-column">
+            <ul class="social-share-button is-flex-direction-row">
               <li>
                 <a title="Twitter" href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title | htmlEscape }}"
                   class="twitter" aria-label="share on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -29,25 +77,10 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <!--sticky  social menu end -->
-      </div>
+      <!-- </div> -->
       <div class="column is-7">
-
-        <h1 data-aos="fade-up" data-aos-duration="500">{{ .Title }}</h1>
-
-        <!-- meta description  -->
-        <div class="meta" data-aos="fade-up" data-aos-duration="800">
-          {{ range $author := first 1 .Params.authors }}
-          <div class="author"><i class="fa fa-user"></i> <a href="/authors/{{ $author | urlize }}">{{ $author }}</a>
-          </div>
-          {{ end }}
-          <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-            <strong>{{ .Date.Format "2-Jan-2006" }}</strong>
-          </div>
-        </div>
-        <!-- meta description  -->
-
         <!-- blog large image start -->
         <figure class="fig-style mb-20">
           {{ $original := .Resources.GetMatch "hero.jpg" }}
