--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -13,6 +13,8 @@
       font-size: 40px;
       margin-bottom: 20px;
       letter-spacing: 0;
+      color: $ac-white;
+      font-family: "Roboto Mono", monospace;
 
       a {
         color: $ac-white;
@@ -162,7 +164,7 @@ a.inline-button {
   height: 170px;
   padding: 32px 16px;
   transition: 0.3s ease-in-out;
-  border: 1px solid transparent;
+  // border: 1px solid transparent;
   &.list-view {
     height: auto;
     padding: 0 16px 32px;
@@ -170,7 +172,7 @@ a.inline-button {
     border: 1px solid transparent;
     border-bottom: 1px solid $ac-white-light;
     &:hover {
-      border: 1px solid transparent;
+      // border: 1px solid transparent;
       box-shadow: none;
       border-bottom: 1px solid $ac-white-light;
     }
@@ -185,7 +187,7 @@ a.inline-button {
   }
   &:hover {
     box-shadow: 0px 2px 30px rgba(44, 60, 74, 0.08);
-    border: 1px solid $ac-primary;
+    // border: 1px solid $ac-primary;
 
     h2 {
       color: $ac-primary;
